welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:23: error: not found: value lèveBrosse
lèveBrosse()
^