welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
gauche()
baisseBrosse()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
lèveBrosse()
droite()
avance()
avance()
droite()
avance()
gauche()
